--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -24,11 +24,30 @@
         <item name="colorPrimaryVariant">@color/accent</item>
         <item name="colorOnPrimary">@color/accent</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@android:color/holo_blue_light</item>
-        <item name="colorSecondaryVariant">@android:color/holo_blue_light</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/accent</item>
+        <item name="colorSecondaryVariant">@color/accent</item>
+        <item name="colorOnSecondary">@color/accent</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+    </style>
+
+    <style name="SplashTheme" parent="Theme.Material3.Light.NoActionBar">
+        <!-- Customize the splash screen background color -->
+        <item name="android:windowBackground">@drawable/splash_screen</item>
+        <item name="android:icon">@drawable/splash_screen</item>
+        <item name="android:src">@drawable/splash_screen</item>
+        <item name="android:scaleType">fitCenter</item>
+        <!-- Add any other customizations as needed -->
+        <item name="colorPrimary">@color/accent</item>
+        <item name="colorPrimaryVariant">@color/accent</item>
+        <item name="colorOnPrimary">@color/accent</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/accent</item>
+        <item name="colorSecondaryVariant">@color/accent</item>
+        <item name="colorOnSecondary">@color/accent</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor">@color/accent</item>
+        <item name="android:windowLightStatusBar">true</item>
     </style>
 </resources>
