adds options selection fragment

--- a/app/src/main/res/drawable/linear_pink.xml
+++ b/app/src/main/res/drawable/linear_pink.xml
@@ -4,4 +4,6 @@
         android:angle="45"
         android:endColor="#EB7FDC"
         android:startColor="#FFBF00" />
+
+    <corners android:radius="@dimen/_50dp"/>
 </shape>
