--- a/app/src/main/res/layout/fragment_onboarding.xml
+++ b/app/src/main/res/layout/fragment_onboarding.xml
@@ -122,6 +122,7 @@
                         android:textAlignment="center"
                         android:layout_marginEnd="@dimen/_10dp"
                         android:layout_marginStart="@dimen/_10dp"
+                        android:layout_marginBottom="@dimen/_20dp"
                         android:background="@drawable/linear_pink"
                         android:text="@string/next"
                         android:textAllCaps="false"
@@ -131,7 +132,6 @@
                         app:backgroundTint="@null"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/card_description"
                         app:layout_constraintBottom_toBottomOf="parent" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
