--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,5 @@
     <dimen name="_18sp">18sp</dimen>
     <dimen name="_6dp">6dp</dimen>
     <dimen name="_50dp">50dp</dimen>
+    <dimen name="_5dp">5dp</dimen>
 </resources>
