--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,16 @@
     <dimen name="_6dp">6dp</dimen>
     <dimen name="_50dp">50dp</dimen>
     <dimen name="_5dp">5dp</dimen>
+    <dimen name="_100dp">100dp</dimen>
+    <dimen name="_150dp">150dp</dimen>
+    <dimen name="_130dp">130dp</dimen>
+    <dimen name="_8sp">8sp</dimen>
+    <dimen name="_10sp">10sp</dimen>
+    <dimen name="_35dp">35dp</dimen>
+    <dimen name="_40dp">40dp</dimen>
+    <dimen name="_45dp">45dp</dimen>
+    <dimen name="_180dp">180dp</dimen>
+    <dimen name="_80dp">80dp</dimen>
+    <dimen name="_12sp">12sp</dimen>
+    <dimen name="_120dp">120dp</dimen>
 </resources>
