--- a/app/src/main/res/layout/meditation_item_layout.xml
+++ b/app/src/main/res/layout/meditation_item_layout.xml
@@ -11,11 +11,12 @@
 <com.google.android.material.card.MaterialCardView
     android:id="@+id/onboard_card"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/_0dp"
     android:layout_marginStart="@dimen/_15dp"
     android:layout_marginEnd="@dimen/_15dp"
     android:layout_marginTop="@dimen/_20dp"
     android:layout_marginBottom="@dimen/_20dp"
+    app:layout_constraintHeight_percent="0.8"
     app:cardBackgroundColor="@color/accent_lighter"
     app:cardCornerRadius="@dimen/_20dp"
     app:layout_constraintTop_toTopOf="parent"
@@ -29,11 +30,12 @@
 
         <ImageView
             android:id="@+id/meditation_image"
-            android:layout_width="@dimen/_80dp"
-            android:layout_height="@dimen/_100dp"
+            android:layout_width="@dimen/_0dp"
+            android:layout_height="@dimen/_0dp"
             android:src="@drawable/mind_onboard_1"
             android:layout_marginStart="@dimen/_20dp"
             android:scaleType="centerCrop"
+            app:layout_constraintWidth_percent="0.25"
             app:layout_constraintHeight_percent="0.7"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -42,13 +44,14 @@
         <TextView
             android:id="@+id/meditation_title"
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/_45dp"
+            android:layout_height="@dimen/_0dp"
             android:layout_marginStart="@dimen/_10dp"
             android:text="@string/basic"
             android:textAlignment="textStart"
             android:fontFamily="@font/poppins_bold"
             android:textColor="@color/white"
             android:textSize="@dimen/_20sp"
+            app:layout_constraintHeight_percent="0.26"
             app:layout_constraintStart_toEndOf="@+id/meditation_image"
             android:padding="@dimen/_10dp"
             app:layout_constraintTop_toTopOf="@+id/meditation_image" />
@@ -61,7 +64,9 @@
             android:text="@string/course"
             android:textAllCaps="false"
             android:textColor="@color/black"
+            android:textSize="@dimen/_10sp"
             android:theme="@style/MyMaterialButtonStyle"
+            android:layout_marginStart="@dimen/_5dp"
             app:backgroundTint="@color/app_pink"
             app:cornerRadius="@dimen/_50dp"
             app:layout_constraintStart_toStartOf="@+id/meditation_title"
@@ -75,6 +80,7 @@
             android:text="@string/sample_duration"
             android:textAllCaps="false"
             android:textColor="@color/black"
+            android:textSize="@dimen/_10sp"
             android:theme="@style/MyMaterialButtonStyle"
             android:layout_marginStart="@dimen/_5dp"
             app:backgroundTint="@color/app_pink"
@@ -94,9 +100,8 @@
             android:textColor="@color/white"
             android:textSize="@dimen/_12sp"
             app:layout_constraintHorizontal_bias="0.01"
-            app:layout_constraintStart_toEndOf="@+id/meditation_image"
+            app:layout_constraintStart_toStartOf="@+id/meditation_title"
             app:layout_constraintEnd_toEndOf="parent"
-            android:padding="@dimen/_10dp"
             app:layout_constraintTop_toBottomOf="@+id/btnLength" />
 
 
