--- a/app/src/main/res/layout/fragment_onboarding.xml
+++ b/app/src/main/res/layout/fragment_onboarding.xml
@@ -1,140 +1,135 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".presentation.main.onboarding.OnboardingFragment"
-    android:id="@+id/main">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true">
 
-    <androidx.core.widget.NestedScrollView
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/parentView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:background="@color/accent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/parentView"
-            android:background="@color/accent"
+        <TextView
+            android:id="@+id/app_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_15dp"
+            android:layout_marginTop="@dimen/_20dp"
+            android:fontFamily="@font/poppins_bold"
+            android:text="@string/mindfullness"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_25sp"
+            app:layout_constraintBottom_toTopOf="@+id/pager"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/btn_skip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/_15dp"
+            android:text="@string/skip"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toBottomOf="@+id/app_title"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/app_title" />
+
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/pager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="@dimen/_0dp"
+            android:layout_marginStart="@dimen/_15dp"
+            android:layout_marginEnd="@dimen/_15dp"
+            android:layout_marginBottom="@dimen/_15dp"
+            app:layout_constraintBottom_toTopOf="@+id/onboard_card"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent="0.36"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/app_title" />
 
-            <TextView
-                android:id="@+id/app_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/mindfullness"
-                android:textColor="@color/white"
-                android:textSize="@dimen/_25sp"
-                android:fontFamily="@font/poppins_bold"
-                android:layout_marginTop="@dimen/_20dp"
-                android:layout_marginStart="@dimen/_15dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@+id/pager"/>
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/onboard_card"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_0dp"
+            android:layout_marginStart="@dimen/_15dp"
+            android:layout_marginEnd="@dimen/_15dp"
+            app:strokeWidth="@dimen/_0dp"
+            app:cardBackgroundColor="@color/accent_lighter"
+            app:cardCornerRadius="@dimen/_20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent="0.485"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/pager"
+            app:strokeColor="@color/accent">
 
-            <TextView
-                android:id="@+id/btn_skip"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/skip"
-                android:textColor="@color/white"
-                android:layout_marginEnd="@dimen/_15dp"
-                app:layout_constraintTop_toTopOf="@+id/app_title"
-                app:layout_constraintBottom_toBottomOf="@+id/app_title"
-                app:layout_constraintEnd_toEndOf="parent"/>
-
-            <androidx.viewpager.widget.ViewPager
-                android:id="@+id/pager"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_0dp"
-                android:layout_marginStart="@dimen/_15dp"
-                android:layout_marginEnd="@dimen/_15dp"
-                android:layout_marginBottom="@dimen/_15dp"
-                app:layout_constraintHeight_percent="0.36"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/app_title"
-                app:layout_constraintBottom_toTopOf="@+id/onboard_card"
-                />
+                android:layout_height="match_parent">
 
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/onboard_card"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_0dp"
-                android:layout_marginStart="@dimen/_15dp"
-                android:layout_marginEnd="@dimen/_15dp"
-                app:cardBackgroundColor="@color/accent_lighter"
-                app:cardCornerRadius="@dimen/_20dp"
-                app:strokeColor="@color/accent"
-                app:layout_constraintHeight_percent="0.485"
-                app:layout_constraintTop_toBottomOf="@+id/pager"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent">
+                <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
+                    android:id="@+id/tDots"
+                    android:layout_width="@dimen/_0dp"
+                    android:layout_height="@dimen/_20dp"
+                    android:layout_marginStart="@dimen/_20dp"
+                    android:layout_marginTop="@dimen/_30dp"
+                    app:dotsColor="@android:color/darker_gray"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintWidth_percent="0.3"
+                    app:selectedDotColor="@color/app_pink" />
 
-                <androidx.constraintlayout.widget.ConstraintLayout
+                <TextView
+                    android:id="@+id/card_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_20dp"
+                    android:layout_marginTop="@dimen/_10dp"
+                    android:fontFamily="@font/poppins_bold"
+                    android:text="@string/mindfullness"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_25sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tDots" />
+
+                <TextView
+                    android:id="@+id/card_description"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
-                        android:id="@+id/tDots"
-                        android:layout_width="@dimen/_0dp"
-                        android:layout_height="@dimen/_20dp"
-                        android:layout_marginTop="@dimen/_30dp"
-                        android:layout_marginStart="@dimen/_10dp"
-                        app:dotsColor="@android:color/darker_gray"
-                        app:selectedDotColor="@color/app_pink"
-                        app:layout_constraintWidth_percent="0.3"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"/>
-
-                    <TextView
-                        android:id="@+id/card_title"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/mindfullness"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/_25sp"
-                        android:fontFamily="@font/poppins_bold"
-                        android:layout_marginTop="@dimen/_10dp"
-                        android:layout_marginStart="@dimen/_10dp"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/tDots" />
-
-                    <TextView
-                        android:id="@+id/card_description"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/_10dp"
-                        android:layout_marginTop="@dimen/_10dp"
-                        android:text="@string/mindfullness_description_2"
-                        android:fontFamily="@font/poppins"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/_15sp"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/card_title" />
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_20dp"
+                    android:layout_marginEnd="@dimen/_20dp"
+                    android:layout_marginTop="@dimen/_10dp"
+                    android:fontFamily="@font/poppins"
+                    android:text="@string/mindfullness_description_2"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_15sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/card_title" />
 
 
-                    <com.google.android.material.button.MaterialButton
-                        android:id="@+id/btnGetStarted"
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/_50dp"
-                        android:textAlignment="center"
-                        android:layout_marginEnd="@dimen/_10dp"
-                        android:layout_marginStart="@dimen/_10dp"
-                        android:layout_marginBottom="@dimen/_20dp"
-                        android:background="@drawable/linear_pink"
-                        android:text="@string/next"
-                        android:textAllCaps="false"
-                        android:textColor="@android:color/white"
-                        android:textSize="@dimen/_18sp"
-                        android:theme="@style/MyMaterialButtonStyle"
-                        app:backgroundTint="@null"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent" />
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btnGetStarted"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_50dp"
+                    android:layout_marginStart="@dimen/_20dp"
+                    android:layout_marginEnd="@dimen/_20dp"
+                    android:layout_marginBottom="@dimen/_20dp"
+                    android:background="@drawable/linear_pink"
+                    android:text="@string/next"
+                    android:textAlignment="center"
+                    android:textAllCaps="false"
+                    android:textColor="@android:color/white"
+                    android:textSize="@dimen/_18sp"
+                    android:theme="@style/MyMaterialButtonStyle"
+                    app:backgroundTint="@null"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
 
-                </androidx.constraintlayout.widget.ConstraintLayout>
-            </com.google.android.material.card.MaterialCardView>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </com.google.android.material.card.MaterialCardView>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.core.widget.NestedScrollView>
-</layout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.core.widget.NestedScrollView>
