--- a/app/src/main/res/layout/fragment_options_suggestion.xml
+++ b/app/src/main/res/layout/fragment_options_suggestion.xml
@@ -81,5 +81,27 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/exercise_suggestion" />
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnGetStarted"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_50dp"
+            android:layout_marginStart="@dimen/_20dp"
+            android:layout_marginEnd="@dimen/_20dp"
+            android:layout_marginBottom="@dimen/_20dp"
+            android:background="@drawable/linear_pink"
+            android:text="@string/maybe_later"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/_18sp"
+            android:theme="@style/MyMaterialButtonStyle"
+            app:layout_constraintVertical_bias="0.9"
+            app:backgroundTint="@null"
+            app:cornerRadius="@dimen/_50dp"
+            app:layout_constraintTop_toBottomOf="@+id/meditation_card_rv"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
