--- a/app/src/main/res/layout/meditation_item_layout.xml
+++ b/app/src/main/res/layout/meditation_item_layout.xml
@@ -11,14 +11,12 @@
 <com.google.android.material.card.MaterialCardView
     android:id="@+id/onboard_card"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/_0dp"
-    android:layout_marginStart="@dimen/_15dp"
-    android:layout_marginEnd="@dimen/_15dp"
+    android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/_20dp"
     android:layout_marginBottom="@dimen/_20dp"
-    app:layout_constraintHeight_percent="0.8"
+    app:strokeWidth="@dimen/_0dp"
     app:cardBackgroundColor="@color/accent_lighter"
-    app:cardCornerRadius="@dimen/_20dp"
+    app:cardCornerRadius="@dimen/_30dp"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintStart_toStartOf="parent"
@@ -30,12 +28,12 @@
 
         <ImageView
             android:id="@+id/meditation_image"
-            android:layout_width="@dimen/_0dp"
-            android:layout_height="@dimen/_0dp"
+            android:layout_width="@dimen/_80dp"
+            android:layout_height="@dimen/_100dp"
             android:src="@drawable/mind_onboard_1"
             android:layout_marginStart="@dimen/_20dp"
+            app:layout_constraintVertical_bias="0.65"
             android:scaleType="centerCrop"
-            app:layout_constraintWidth_percent="0.25"
             app:layout_constraintHeight_percent="0.7"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -44,38 +42,44 @@
         <TextView
             android:id="@+id/meditation_title"
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/_0dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_10dp"
             android:text="@string/basic"
+            android:layout_marginTop="@dimen/_15dp"
             android:textAlignment="textStart"
             android:fontFamily="@font/poppins_bold"
             android:textColor="@color/white"
             android:textSize="@dimen/_20sp"
+            android:ellipsize="end"
+            app:layout_constraintHorizontal_bias="0.01"
             app:layout_constraintHeight_percent="0.26"
             app:layout_constraintStart_toEndOf="@+id/meditation_image"
-            android:padding="@dimen/_10dp"
-            app:layout_constraintTop_toTopOf="@+id/meditation_image" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <com.google.android.material.button.MaterialButton
+        <androidx.cardview.widget.CardView
             android:id="@+id/btnCourse"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:text="@string/course"
-            android:textAllCaps="false"
+            android:layout_height="@dimen/_30dp"
             android:textColor="@color/black"
-            android:textSize="@dimen/_10sp"
             android:theme="@style/MyMaterialButtonStyle"
-            android:layout_marginStart="@dimen/_5dp"
-            app:backgroundTint="@color/app_pink"
-            app:cornerRadius="@dimen/_50dp"
+            app:cardBackgroundColor="@color/app_pink"
+            app:cardCornerRadius="@dimen/_50dp"
             app:layout_constraintStart_toStartOf="@+id/meditation_title"
-            app:layout_constraintTop_toBottomOf="@+id/meditation_title" />
+            app:layout_constraintTop_toBottomOf="@+id/meditation_title">
 
-        <com.google.android.material.button.MaterialButton
+            <TextView
+                android:id="@+id/tv_course"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/_10sp"
+                android:text="@string/course"/>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
             android:id="@+id/btnLength"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/_30dp"
             android:textAlignment="center"
             android:text="@string/sample_duration"
             android:textAllCaps="false"
@@ -83,16 +87,28 @@
             android:textSize="@dimen/_10sp"
             android:theme="@style/MyMaterialButtonStyle"
             android:layout_marginStart="@dimen/_5dp"
-            app:backgroundTint="@color/app_pink"
-            app:cornerRadius="@dimen/_50dp"
+            app:cardBackgroundColor="@color/app_pink"
+            app:cardCornerRadius="@dimen/_50dp"
             app:layout_constraintStart_toEndOf="@+id/btnCourse"
-            app:layout_constraintTop_toTopOf="@+id/btnCourse" />
+            app:layout_constraintTop_toTopOf="@+id/btnCourse">
+
+            <TextView
+                android:id="@+id/tv_duration"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/_10sp"
+                android:text="@string/sample_duration"/>
+
+
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/meditation_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_10dp"
+            android:layout_marginEnd="@dimen/_10dp"
+            android:layout_marginTop="@dimen/_10dp"
+            android:layout_marginBottom="@dimen/_10dp"
             android:text="@string/learn_fundamentals"
             android:textAlignment="textStart"
             android:ellipsize="end"
@@ -102,7 +118,8 @@
             app:layout_constraintHorizontal_bias="0.01"
             app:layout_constraintStart_toStartOf="@+id/meditation_title"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnLength" />
+            app:layout_constraintTop_toBottomOf="@+id/btnLength"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
