--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,4 +25,5 @@
     <dimen name="_80dp">80dp</dimen>
     <dimen name="_12sp">12sp</dimen>
     <dimen name="_120dp">120dp</dimen>
+    <dimen name="_70dp">70dp</dimen>
 </resources>
