--- a/app/src/main/res/layout/fragment_options_selection.xml
+++ b/app/src/main/res/layout/fragment_options_selection.xml
@@ -47,6 +47,9 @@
             android:layout_marginTop="@dimen/_20dp"
             android:layout_marginEnd="@dimen/_15dp"
             android:layout_marginBottom="@dimen/_20dp"
+            android:paddingTop="@dimen/_30dp"
+            android:paddingBottom="@dimen/_30dp"
+            app:layout_constraintVertical_bias="0.2"
             app:strokeWidth="@dimen/_0dp"
             app:cardBackgroundColor="@color/accent_lighter"
             app:cardCornerRadius="@dimen/_20dp"
