--- a/app/src/main/res/drawable/tab_indicator_selected.xml
+++ b/app/src/main/res/drawable/tab_indicator_selected.xml
@@ -2,10 +2,13 @@
 <shape
     android:innerRadius="0dp"
     android:shape="rectangle"
-    android:thickness="@dimen/_6dp"
+    android:thickness="@dimen/_1dp"
     android:useLevel="false"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <solid
         android:color="@color/app_pink" />
+    <corners
+        android:radius="@dimen/_100dp"
+        />
 
 </shape>
