--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -26,4 +26,6 @@
     <dimen name="_12sp">12sp</dimen>
     <dimen name="_120dp">120dp</dimen>
     <dimen name="_70dp">70dp</dimen>
+    <dimen name="_2dp">2dp</dimen>
+    <dimen name="_1dp">1dp</dimen>
 </resources>
