--- a/app/src/main/res/layout/fragment_onboarding.xml
+++ b/app/src/main/res/layout/fragment_onboarding.xml
@@ -75,6 +75,7 @@
                     android:layout_height="@dimen/_10dp"
                     android:layout_marginStart="@dimen/_20dp"
                     android:layout_marginTop="@dimen/_30dp"
+                    android:padding="@dimen/_1dp"
                     android:background="@android:color/transparent"
                     app:tabBackground="@drawable/tab_selector"
                     app:tabIndicatorHeight="@dimen/_0dp"
