--- a/app/src/main/res/layout/daily_exercises_layout.xml
+++ b/app/src/main/res/layout/daily_exercises_layout.xml
@@ -1,49 +1,48 @@
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/accent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:paddingBottom="@dimen/_30dp"
+    android:paddingEnd="@dimen/_10dp"
+    android:background="@color/accent">
 
     <com.google.android.material.card.MaterialCardView
-        android:layout_width="@dimen/_0dp"
-        android:layout_height="@dimen/_0dp"
+        android:layout_width="@dimen/_200dp"
+        android:layout_height="wrap_content"
         android:layout_margin="@dimen/_15dp"
-        app:cardCornerRadius="@dimen/_20dp"
-        app:layout_constraintWidth_percent="0.6"
-        app:layout_constraintHeight_percent="0.5"
         app:cardBackgroundColor="@color/accent_lighter"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:cardCornerRadius="@dimen/_20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/top_image"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_0dp"
-            android:layout_margin="@dimen/_20dp"
-            android:src="@drawable/floral_2"
-            app:layout_constraintHeight_percent="0.5"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            />
+            <ImageView
+                android:id="@+id/top_image"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_0dp"
+                android:layout_marginTop="@dimen/_15dp"
+                android:layout_marginEnd="@dimen/_20dp"
+                android:layout_marginStart="@dimen/_20dp"
+                android:src="@drawable/floral_2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHeight_percent="0.4"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_20dp"
+                android:fontFamily="@font/poppins"
                 android:text="@string/morning_coffee"
                 android:textColor="@color/white"
-                android:fontFamily="@font/poppins"
                 android:textSize="@dimen/_18sp"
-                android:layout_marginStart="@dimen/_20dp"
-                app:layout_constraintTop_toBottomOf="@+id/top_image"
                 app:layout_constraintStart_toStartOf="parent"
-                />
+                app:layout_constraintTop_toBottomOf="@+id/top_image" />
 
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/course"
@@ -53,8 +52,8 @@
                 android:layout_marginTop="@dimen/_15dp"
                 app:cardBackgroundColor="@color/app_pink"
                 app:cardCornerRadius="@dimen/_50dp"
-                app:layout_constraintTop_toBottomOf="@+id/title"
-                app:layout_constraintStart_toStartOf="parent">
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/title">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -67,17 +66,17 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/baseline_volume_up"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"/>
+                        app:layout_constraintTop_toTopOf="parent" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/course"
-                    app:layout_constraintStart_toEndOf="@+id/volume_btn"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/course"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/volume_btn"
+                        app:layout_constraintTop_toTopOf="parent" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -87,12 +86,12 @@
                 android:id="@+id/duration"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/_40dp"
-                android:layout_marginStart="@dimen/_18dp"
+                android:layout_marginStart="@dimen/_5dp"
                 android:layout_marginTop="@dimen/_15dp"
                 app:cardBackgroundColor="@color/app_pink"
                 app:cardCornerRadius="@dimen/_50dp"
-                app:layout_constraintTop_toBottomOf="@+id/title"
-                app:layout_constraintStart_toEndOf="@+id/course">
+                app:layout_constraintStart_toEndOf="@+id/course"
+                app:layout_constraintTop_toBottomOf="@+id/title">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -103,24 +102,26 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/sample_duration"
-                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"/>
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </com.google.android.material.card.MaterialCardView>
 
             <TextView
+                android:id="@+id/description_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/sample_description"
-                android:textColor="@color/white"
-                android:textAlignment="viewStart"
                 android:layout_marginTop="@dimen/_10dp"
-                app:layout_constraintTop_toBottomOf="@+id/course"
-                app:layout_constraintStart_toStartOf="@+id/course" />
+                android:paddingBottom="@dimen/_20dp"
+                android:text="@string/sample_description"
+                android:textAlignment="viewStart"
+                android:textColor="@color/white"
+                app:layout_constraintStart_toStartOf="@+id/course"
+                app:layout_constraintTop_toBottomOf="@+id/course" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
