--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -34,23 +34,245 @@
             android:layout_marginStart="@dimen/_8dp"
             android:padding="@dimen/_10dp"
             android:textSize="@dimen/_16sp"
-            android:layout_marginTop="@dimen/_10dp"
             android:text="@string/daily_exercises"
             app:layout_constraintTop_toBottomOf="@+id/page_title"
             app:layout_constraintStart_toStartOf="parent" />
         
-        <androidx.viewpager2.widget.ViewPager2
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/daily_exercises_pager"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_0dp"
-            android:layout_marginStart="@dimen/_8dp"
-            android:layout_marginEnd="@dimen/_8dp"
-            android:padding="@dimen/_10dp"
-            app:layout_constraintHeight_percent="0.3"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingStart="@dimen/_8dp"
+            android:paddingEnd="@dimen/_10dp"
             app:layout_constraintTop_toBottomOf="@+id/daily_exercises"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/challeging_times"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_160dp"
+            android:layout_marginStart="@dimen/_15dp"
+            android:layout_marginEnd="@dimen/_15dp"
+            app:cardCornerRadius="@dimen/_20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/daily_exercises_pager">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_250dp"
+                    android:src="@drawable/linear_green"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+
+                <ImageView
+                    android:id="@+id/top_image"
+                    android:layout_width="@dimen/_0dp"
+                    android:layout_height="@dimen/_0dp"
+                    android:layout_margin="@dimen/_20dp"
+                    android:src="@drawable/floral_2"
+                    app:layout_constraintHeight_percent="0.5"
+                    app:layout_constraintWidth_percent="0.3"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_20dp"
+                    android:layout_marginTop="@dimen/_25dp"
+                    android:fontFamily="@font/poppins"
+                    android:text="@string/challenging_times"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_18sp"
+                    app:layout_constraintHorizontal_bias="0.1"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/top_image"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/description_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_10dp"
+                    android:paddingEnd="@dimen/_200dp"
+                    android:paddingStart="@dimen/_10dp"
+                    android:paddingBottom="@dimen/_20dp"
+                    android:text="@string/memotional_care"
+                    android:textAlignment="viewStart"
+                    android:textColor="@color/white"
+                    android:lines="3"
+                    app:layout_constraintHorizontal_bias="0.1"
+                    app:layout_constraintStart_toStartOf="@id/title"
+                    app:layout_constraintEnd_toStartOf="@id/top_image"
+                    app:layout_constraintTop_toBottomOf="@+id/title" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </com.google.android.material.card.MaterialCardView>
+
+        <TextView
+            android:id="@+id/recommended_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:fontFamily="@font/poppins_bold"
+            android:layout_marginStart="@dimen/_8dp"
+            android:layout_marginTop="@dimen/_10dp"
+            android:padding="@dimen/_10dp"
+            android:textSize="@dimen/_16sp"
+            android:text="@string/daily_exercises"
+            app:layout_constraintTop_toBottomOf="@+id/challeging_times"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recommended_rv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingStart="@dimen/_8dp"
+            android:paddingEnd="@dimen/_10dp"
+            app:layout_constraintTop_toBottomOf="@+id/recommended_list"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/recommended_item"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_160dp"
+            android:layout_marginStart="@dimen/_15dp"
+            android:layout_marginEnd="@dimen/_15dp"
+            android:layout_marginBottom="@dimen/_200dp"
+            app:cardBackgroundColor="@color/accent_lighter"
+            app:cardCornerRadius="@dimen/_20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/recommended_rv"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <ImageView
+                            android:id="@+id/recommended_image"
+                            android:layout_width="@dimen/_0dp"
+                            android:layout_height="@dimen/_0dp"
+                            android:layout_marginEnd="@dimen/_20dp"
+                            android:layout_marginStart="@dimen/_20dp"
+                            android:layout_marginTop="@dimen/_20dp"
+                            android:src="@drawable/floral_2"
+                            android:scaleType="centerCrop"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintHeight_percent="0.4"
+                            app:layout_constraintWidth_percent="0.35"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <TextView
+                            android:id="@+id/recommended_title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/_10dp"
+                            android:layout_marginTop="@dimen/_20dp"
+                            android:fontFamily="@font/poppins"
+                            android:text="@string/morning_coffee"
+                            android:textColor="@color/white"
+                            android:textSize="@dimen/_18sp"
+                            app:layout_constraintStart_toEndOf="@id/recommended_image"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <com.google.android.material.card.MaterialCardView
+                            android:id="@+id/course"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="@dimen/_18dp"
+                            android:layout_marginTop="@dimen/_5dp"
+                            app:cardBackgroundColor="@color/app_pink"
+                            app:cardCornerRadius="@dimen/_50dp"
+                            app:layout_constraintStart_toStartOf="@+id/recommended_title"
+                            app:layout_constraintTop_toBottomOf="@+id/recommended_title">
+
+                            <androidx.constraintlayout.widget.ConstraintLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:padding="@dimen/_10dp">
+
+<!--                                <ImageView-->
+<!--                                    android:id="@+id/volume_btn"-->
+<!--                                    android:layout_width="wrap_content"-->
+<!--                                    android:layout_height="wrap_content"-->
+<!--                                    android:src="@drawable/baseline_volume_up"-->
+<!--                                    app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                                    app:layout_constraintStart_toStartOf="parent"-->
+<!--                                    app:layout_constraintTop_toTopOf="parent" />-->
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="@string/course"
+                                    app:layout_constraintBottom_toBottomOf="parent"
+                                    app:layout_constraintStart_toStartOf="parent"
+                                    app:layout_constraintEnd_toEndOf="parent"
+                                    app:layout_constraintTop_toTopOf="parent" />
+
+                            </androidx.constraintlayout.widget.ConstraintLayout>
+
+                        </com.google.android.material.card.MaterialCardView>
+
+                        <com.google.android.material.card.MaterialCardView
+                            android:id="@+id/duration"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/_5dp"
+                            android:layout_marginEnd="@dimen/_10dp"
+                            android:layout_marginTop="@dimen/_5dp"
+                            app:cardBackgroundColor="@color/app_pink"
+                            app:cardCornerRadius="@dimen/_50dp"
+                            app:layout_constraintStart_toEndOf="@+id/course"
+                            app:layout_constraintTop_toBottomOf="@+id/recommended_title">
+
+                            <androidx.constraintlayout.widget.ConstraintLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:padding="@dimen/_10dp">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="@string/sample_duration"
+                                    app:layout_constraintBottom_toBottomOf="parent"
+                                    app:layout_constraintEnd_toEndOf="parent"
+                                    app:layout_constraintStart_toStartOf="parent"
+                                    app:layout_constraintTop_toTopOf="parent" />
+
+                            </androidx.constraintlayout.widget.ConstraintLayout>
+
+                        </com.google.android.material.card.MaterialCardView>
+
+                        <TextView
+                            android:id="@+id/recommended_description"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/_5dp"
+                            android:text="@string/sample_description"
+                            android:textAlignment="viewStart"
+                            android:textColor="@color/white"
+                            app:layout_constraintStart_toStartOf="@+id/course"
+                            app:layout_constraintTop_toBottomOf="@+id/course" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </com.google.android.material.card.MaterialCardView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
